example/k8s/02-zitadel.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel.example.local
spec:
  hostnames:
  - zitadel.example.local
  - iam.example.local
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: eg-default
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: example-zitadel
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
